# wire_cut

./: CMakeLists.txt  License.txt  README.md  Wire_cutter.dch
Core/: LCD_M15SGF.c  LCD_M15SGF.h  main.c  main.h
RTT/: SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_Conf.h  SEGGER_RTT_printf.c
